--- a/1 settimana/Giorno 2/form.html
+++ b/1 settimana/Giorno 2/form.html
@@ -9,7 +9,12 @@
     <form action="#" method="get|post">
         <fieldset>
             <legend>Anagrafica</legend>
-            
+            <label for="username">Nome Utente</label>
+            <input type="text" name="username" placeholder="username">
+            <br>
+            <label for="password">Password</label>
+            <input type="password" name="password" placeholder="password">
+
         </fieldset>
          
 
