--- a/5_settimana/Giorno_2/articolo.html
+++ b/5_settimana/Giorno_2/articolo.html
@@ -53,8 +53,8 @@
     <main>
       <article>
         <h1>
-          Come creare un template per i post
-          <img src="./assets/img/underline.svg" alt="" />
+          Come creare un <span>template per i post<img src="./assets/img/underline.svg" alt="" /></span>
+          
         </h1>
         <p>
           <i class="fas fa-pen-square"></i> di Mario Rossi -
