--- a/5_settimana/Giorno_3/Honey.html
+++ b/5_settimana/Giorno_3/Honey.html
@@ -48,10 +48,13 @@
         width: 300px;
         background-color: #fbf7e3;
         border-radius: 50px;
-        margin: 0;
         color: #612406;
         overflow: hidden;
         text-align: center;
+      }
+
+      article p {
+        margin: 0;
       }
 
       .card .text-container {
