--- a/6_settimana/Giorno_2/FE-U2-S2-L2-Esercizio.html
+++ b/6_settimana/Giorno_2/FE-U2-S2-L2-Esercizio.html
@@ -169,7 +169,9 @@ EXTRAS
       </div>
     </nav>
     <div class="container row m-auto mt-5">
-      <div class="p-5 d-inline bg-body-tertiary justify-center">
+      <div
+        class="p-5 d-inline bg-body-tertiary rounded shadow-sm justify-center"
+      >
         <h1 class="span-4">Sinusoide</h1>
         <span class="span-8">Ecco la vostra sinusoide</span>
         >
@@ -181,11 +183,13 @@ EXTRAS
         </p>
         <button class="btn btn-primary">Prenota ora</button>
       </div>
-      <div class="row g-2">
+      <div class="row">
         <a id="saldi"></a>
         <h2>Saldi</h2>
-        <div class="row g-2">
-          <div class="card col-3 border border-primary g-2">
+        <div
+          class="row collapse show g-2 g-md-3 g-xl-5 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4"
+        >
+          <div class="card col-3 border border-primary d-none d-lg-block">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -198,7 +202,7 @@ EXTRAS
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card col-3 border border-primary">
+          <div class="card col-3 border border-primary d-none d-md-block">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -239,11 +243,13 @@ EXTRAS
           </div>
         </div>
       </div>
-      <div class="row row-cols-sm-2 row-cols-md-2 row-cols-lg-4 row-cols-xl-6">
+      <div class="container">
         <a id="WelcomeSummer"></a>
         <h2>Welcome Summer</h2>
-        <div class="row">
-          <div class="card col-12">
+        <div
+          class="row gx-5 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-6"
+        >
+          <div class="card">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
