--- a/7_settimana/Giono_5/backoffice.html
+++ b/7_settimana/Giono_5/backoffice.html
@@ -54,7 +54,7 @@
       </nav>
     </header>
 
-    <main class="flex-grow-1">
+    <main class="flex-grow-1" id="parziale">
       <h2 class="text-center mt-2">Fruttarolo - Amministrazione</h2>
       <div class="container">
         <div class="row mt-4 justify-content-center">
@@ -94,7 +94,7 @@
                 <input type="number" class="form-control" required id="price"/>
               </div>
               <button type="submit" class="btn btn-primary">Crea!</button>
-              <button class="btn btn-danger" onclick="deleteEvent()">
+              <button class="btn btn-danger" onclick="deleteFruit()">
                 ELIMINA
               </button>
               <button type="button" class="btn btn-secondary" id="reset-button">Reset</button>
