--- a/7_settimana/Giono_5/index.html
+++ b/7_settimana/Giono_5/index.html
@@ -60,7 +60,7 @@
             <span class="visually-hidden">Caricamento in corso...</span>
           </div>
           Caricamento in corso... </span
-        >Fruttarolo - Frutta & Benchmark Fallito
+        >Fruttarolo - Frutta & Disperazione
       </h2>
       <div class="container">
         <div
